tests/e2e/destructoring6.story
obj = {"foo": 1, "bar": 2, "car": 3}
c = true
{ c } = obj
